# crop_row_detection

./: Jenkinsfile  README.md
map_compiler/: README.md
map_compiler/deploy_scripts/open_drone_map/: create_odm_docker_image.sh  general_executor.sh
map_compiler/photogrametric_pipeline/: Dockerfile  clang-format
map_compiler/photogrametric_pipeline/modules/odm_georef/: CMakeLists.txt
map_compiler/photogrametric_pipeline/modules/odm_georef/src/: Georef.cpp
map_compiler/photogrametric_pipeline/pipeline/: CMakeLists.txt
map_compiler/photogrametric_pipeline/pipeline/data_structure/: CMakeLists.txt
map_compiler/photogrametric_pipeline/pipeline/data_structure/cmake/: data_structureConfig.cmake.in
map_compiler/photogrametric_pipeline/pipeline/feature_extraction/: CMakeLists.txt
map_compiler/photogrametric_pipeline/pipeline/feature_extraction/include/feature_extraction/: feature_processing.h
map_compiler/photogrametric_pipeline/pipeline/feature_extraction/src/: feature_extraction.cpp  feature_extraction.h  feature_extraction_config.h  feature_extraction_task.h  feature_processing.cpp  keypoints_repository.h  main.cpp
map_compiler/photogrametric_pipeline/pipeline/feature_extraction/tests/: CMakeLists.txt  main.cpp
map_compiler/photogrametric_pipeline/pipeline/interfaces/: CMakeLists.txt
map_compiler/photogrametric_pipeline/pipeline/interfaces/cmake/: Pipeline_interfacesConfig.cmake.in
map_compiler/photogrametric_pipeline/pipeline/interfaces/include/interfaces/: active_callback_interface.h  pipeline_process_interface.h
map_compiler/photogrametric_pipeline/pipeline/interfaces/src/: pipeline_process_interface.h
map_compiler/photogrametric_pipeline/pipeline/keypoints_processor/: CMakeLists.txt
map_compiler/photogrametric_pipeline/pipeline/keypoints_processor/cmake/: keypoint_descriptor_processorConfig.cmake.in
map_compiler/photogrametric_pipeline/pipeline/keypoints_processor/include/keypoints_processor/: feature_definitions.h  feature_exceptions.h  feature_extraction.h  feature_extraction_config.h  feature_extraction_task.h  feature_keypoints.h  feature_matcher.h  feature_processing.h  feature_processing_task_based.h  keypoint_landmarks.h  keypoints_repository.h  pipeline_processor.h
map_compiler/photogrametric_pipeline/pipeline/keypoints_processor/src/: feature_extraction.cpp  feature_keypoints.cpp  feature_processing.cpp  feature_processing_task_based.cpp  main.cpp  pipeline_processor.cpp
map_compiler/photogrametric_pipeline/pipeline/keypoints_processor/tests/: CMakeLists.txt  keypoint_processing_utils.h  main.cpp  test_keypoints_matching.cpp
map_compiler/photogrametric_pipeline/pipeline/motion_recovery/: CMakeLists.txt
map_compiler/photogrametric_pipeline/pipeline/motion_recovery/cmake/: Pipeline_motion_recoveryConfig.cmake.in
map_compiler/photogrametric_pipeline/pipeline/motion_recovery/include/motion_recovery/: motion_recovery.h
map_compiler/photogrametric_pipeline/pipeline/motion_recovery/src/: motion_recovery.cpp
map_compiler/photogrametric_pipeline/pipeline/motion_recovery/tests/: CMakeLists.txt  main.cpp
map_compiler/photogrametric_pipeline/pipeline/processor/: CMakeLists.txt
map_compiler/photogrametric_pipeline/pipeline/processor/cmake/: Pipeline_ortho_processorConfig.cmake.in
map_compiler/photogrametric_pipeline/pipeline/processor/include/processor/: pipeline_processor.h
map_compiler/photogrametric_pipeline/pipeline/processor/src/: pipeline_processor.cpp
map_compiler/photogrametric_pipeline/pipeline/processor/tests/: CMakeLists.txt  main.cpp
map_compiler/photogrametric_pipeline/pipeline/utils/: CMakeLists.txt
map_compiler/photogrametric_pipeline/pipeline/utils/cmake/: Pipeline_utilsConfig.cmake.in
map_compiler/photogrametric_pipeline/pipeline/utils/include/factory/: factory_base.h  generic_factory.h
map_compiler/photogrametric_pipeline/pipeline/utils/include/utils/: cv_utils.h  factory_base.h  image_filename_utilities.h  keypoint_id_generator.h  pipeline_utils.h  thread_pool.h
map_compiler/photogrametric_pipeline/pipeline/utils/include/utils/active/: active_callbacks.h  active_object.h  active_thread_pool.h
map_compiler/photogrametric_pipeline/pipeline/utils/src/: cv_utils.cpp  cv_utils.h  keypoint_id_generator.cpp  main.cpp
map_compiler/photogrametric_pipeline/pipeline/utils/test/: CMakeLists.txt  active_object_fixture.h  tests_utils_photogrametric_pipeline.cpp
map_compiler/playbooks/odm/: odm.yml
map_compiler/playbooks/website/: playbook.yml
map_compiler/website/: MANIFEST.in  README.txt  setup.py
map_compiler/website/main_page/: map_compiler_site.py  utils.py
map_compiler/website/main_page/data/: config.ini
map_compiler/website/main_page/templates/: image_upload_completed.html  index.html
map_compiler/website/map_compiler_web/local/: bin  include  lib
map_compiler/website/principal/: map_compier_site.py  map_compiler_site.py  utils.py
playbook/: compiler_front_end_deployer.yaml  playbook.yml
playbook/roles/base/: main.yaml
playbook/roles/base/tasks/: main.yaml
poc_detector/image_segmentation/: image_upscale.py  test_upsampling.py
poc_detector/ransac_approach/utils/: image_utils.py
poc_detector/simulation/blender/: sol_row_simulation.blend
poc_detector/simulation/scripts/: clothoides.py  create_row_fields.py  launch_blender.sh  scripts_managers.py
poc_detector/utils/: color_segmentator.py  color_segmentator_gui.py  config.ini  convex_hull.py  crop_line_finder_test.py  graph_cut.py  graph_cutter.cpp  image_cropper.py  image_segmentator.h  interactive_graph_cut.py  lane_finder.py  lane_finder_test.py  line_points_graph.py  processing_segmented_image_utils.py  segmenter.py  splines_builder.py  tests_rectas.py  thinning.py  thinning_2.py  thinning_algorithim.py  utils_definitions.h  utils_image.cpp  utils_image.h  vector_utils.py
scripts/: deploy_odm_scripts.sh  deploy_with_ansible.sh
scripts/open_drone_map/: Dockerfile  create_odm_docker_image.sh
simulation/gazebo_worlds/: farm_field.world
simulation/scripts/: create_row_fields.py  curve_creator.py  requeriments.txt
(+9 files in other folders)
